// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseIcon matches snapshot with custom className 1`] = `
<div>
  <svg
    class="custom-class"
    data-testid="close-icon"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6L6 18M6 6l12 12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`CloseIcon matches snapshot with custom size as number 1`] = `
<div>
  <svg
    data-testid="close-icon"
    height="32px"
    viewBox="0 0 24 24"
    width="32px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6L6 18M6 6l12 12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`CloseIcon matches snapshot with custom size as string 1`] = `
<div>
  <svg
    data-testid="close-icon"
    height="48px"
    viewBox="0 0 24 24"
    width="48px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6L6 18M6 6l12 12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`CloseIcon matches snapshot with default props 1`] = `
<div>
  <svg
    data-testid="close-icon"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6L6 18M6 6l12 12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;
